yamls/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - name: python
        image: takuyayone/test-python:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          protocol: TCP  
      - name: mongo
        image: mongo:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          protocol: TCP
      - name: redis
        image: redis:6.2-rc
        imagePullPolicy: IfNotPresent
      - name: nginx
        image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
