yamls/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: default
spec:
  clusterIP: 10.106.181.154
  clusterIPs:
  - 10.106.181.154
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30000
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
