yamls/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 5000
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: traefik-service
                port:
                  number: 80
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: traefik-service
                port:
                  number: 8080
